# cpp_windows_image

./: .dockerignore  .gitignore  Dockerfile  Profile.ps1  clean_all_docker.ps1  config_conan.ps1  config_system.ps1  install_boost.ps1  install_chocolatey.ps1  install_cmake.ps1  install_cmake_git_python.ps1  install_conan.ps1  install_git.ps1  install_llvm.ps1  install_llvm_tools.ps1  install_pwsh.ps1  install_python.ps1  install_vsbt.bat  license.md  makefile  readme.md  vs_exec.bat
.github/workflows/: workflow.yml
conan/profiles/: default  llvm.jinja  msvc.jinja  vs_llvm.jinja  vs_msvc.jinja
tests/: CMakeLists.txt  conanfile.py  hello_world.cpp
